--- a/EBAC Curso Ciência de Dados/Cientista de Dados/modulo_4_exercicios_3.ipynb
+++ b/EBAC Curso Ciência de Dados/Cientista de Dados/modulo_4_exercicios_3.ipynb
@@ -742,7 +742,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 4) Seu código aqui"
+    "# 4) Seu código aqui\n",
+    "df_ba_2 = make_df('BA', True)\n"
    ]
   }
  ],
