--- a/EBAC Curso Ciência de Dados/Cientista de Dados/modulo_4_exercicios_3.ipynb
+++ b/EBAC Curso Ciência de Dados/Cientista de Dados/modulo_4_exercicios_3.ipynb
@@ -738,12 +738,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 260,
+   "execution_count": 362,
    "metadata": {},
    "outputs": [],
    "source": [
     "# 4) Seu código aqui\n",
-    "df_ba_2 = make_df('BA', True)\n"
+    "df_ba_2 = make_df('BA', True)\n",
+    "df_ba_2.to_csv('pvl_ba_estado.csv')"
    ]
   }
  ],
