--- a/EBAC Curso Ciência de Dados/Cientista de Dados/modulo_limpeza_e_preparacao_de_dados.ipynb
+++ b/EBAC Curso Ciência de Dados/Cientista de Dados/modulo_limpeza_e_preparacao_de_dados.ipynb
@@ -15,6 +15,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 1\\.1 Identificando dados ausentes"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -372,17 +379,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
     "# inserindo um dado faltante no dataframe\n",
-    "df.iloc[4, 2] = np.nan"
+    "df.iloc[1, 0] = np.nan\n",
+    "df.iloc[4, 0] = np.nan\n",
+    "df.iloc[3, 0] = np.nan\n",
+    "df.iloc[8, 0] = np.nan\n",
+    "df.iloc[6, 3] = np.nan\n",
+    "df.iloc[4, 3] = np.nan"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -415,66 +427,66 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>A</th>\n",
-       "      <td>19</td>\n",
+       "      <td>19.0</td>\n",
        "      <td>5.334578</td>\n",
        "      <td>42.255190796214734</td>\n",
        "      <td>17.274552</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>B</th>\n",
-       "      <td>23</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>75.997894</td>\n",
        "      <td>66.28674306770573</td>\n",
        "      <td>50.555908</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>C</th>\n",
-       "      <td>62</td>\n",
+       "      <td>62.0</td>\n",
        "      <td>14.712186</td>\n",
        "      <td>3.429024060428465</td>\n",
        "      <td>97.323160</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>D</th>\n",
-       "      <td>83</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>71.149910</td>\n",
        "      <td>35.51254489778491</td>\n",
        "      <td>28.286585</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>E</th>\n",
-       "      <td>59</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>56.793323</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>4.236952</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>F</th>\n",
-       "      <td>12</td>\n",
+       "      <td>12.0</td>\n",
        "      <td>83.181236</td>\n",
        "      <td>7.990770106266865</td>\n",
        "      <td>17.765918</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>G</th>\n",
-       "      <td>21</td>\n",
+       "      <td>21.0</td>\n",
        "      <td>77.891506</td>\n",
        "      <td>49.61628656373127</td>\n",
-       "      <td>62.071815</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>H</th>\n",
-       "      <td>28</td>\n",
+       "      <td>28.0</td>\n",
        "      <td>14.235639</td>\n",
        "      <td>61.72276021602391</td>\n",
        "      <td>36.772142</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>I</th>\n",
-       "      <td>73</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>1.565151</td>\n",
        "      <td>69.06079187224358</td>\n",
-       "      <td>89.420183</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -482,18 +494,18 @@
       ],
       "text/plain": [
        "   coluna1    coluna2             coluna3    coluna4\n",
-       "A       19   5.334578  42.255190796214734  17.274552\n",
-       "B       23  75.997894   66.28674306770573  50.555908\n",
-       "C       62  14.712186   3.429024060428465  97.323160\n",
-       "D       83  71.149910   35.51254489778491  28.286585\n",
-       "E       59  56.793323                 NaN   4.236952\n",
-       "F       12  83.181236   7.990770106266865  17.765918\n",
-       "G       21  77.891506   49.61628656373127  62.071815\n",
-       "H       28  14.235639   61.72276021602391  36.772142\n",
-       "I       73   1.565151   69.06079187224358  89.420183"
+       "A     19.0   5.334578  42.255190796214734  17.274552\n",
+       "B      NaN  75.997894   66.28674306770573  50.555908\n",
+       "C     62.0  14.712186   3.429024060428465  97.323160\n",
+       "D      NaN  71.149910   35.51254489778491  28.286585\n",
+       "E      NaN  56.793323                 NaN        NaN\n",
+       "F     12.0  83.181236   7.990770106266865  17.765918\n",
+       "G     21.0  77.891506   49.61628656373127        NaN\n",
+       "H     28.0  14.235639   61.72276021602391  36.772142\n",
+       "I      NaN   1.565151   69.06079187224358        NaN"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -501,6 +513,476 @@
    "source": [
     "# NaN = Not a Number\n",
     "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>coluna1</th>\n",
+       "      <th>coluna2</th>\n",
+       "      <th>coluna3</th>\n",
+       "      <th>coluna4</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>A</th>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>B</th>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>C</th>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>D</th>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>E</th>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>F</th>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>G</th>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>H</th>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>I</th>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   coluna1  coluna2  coluna3  coluna4\n",
+       "A    False    False    False    False\n",
+       "B     True    False    False    False\n",
+       "C    False    False    False    False\n",
+       "D     True    False    False    False\n",
+       "E     True    False     True     True\n",
+       "F    False    False    False    False\n",
+       "G    False    False    False     True\n",
+       "H    False    False    False    False\n",
+       "I     True    False    False     True"
+      ]
+     },
+     "execution_count": 64,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# identificando valores faltantes\n",
+    "df.isna()\n",
+    "df.isnull()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "A    False\n",
+       "B     True\n",
+       "C    False\n",
+       "D     True\n",
+       "E     True\n",
+       "F    False\n",
+       "G    False\n",
+       "H    False\n",
+       "I     True\n",
+       "Name: coluna1, dtype: bool"
+      ]
+     },
+     "execution_count": 66,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# identificando apenas de uma coluna\n",
+    "df.coluna1.isna()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>coluna1</th>\n",
+       "      <th>coluna2</th>\n",
+       "      <th>coluna3</th>\n",
+       "      <th>coluna4</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>B</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>75.997894</td>\n",
+       "      <td>66.28674306770573</td>\n",
+       "      <td>50.555908</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>D</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>71.149910</td>\n",
+       "      <td>35.51254489778491</td>\n",
+       "      <td>28.286585</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>E</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>56.793323</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>I</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1.565151</td>\n",
+       "      <td>69.06079187224358</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   coluna1    coluna2            coluna3    coluna4\n",
+       "B      NaN  75.997894  66.28674306770573  50.555908\n",
+       "D      NaN  71.149910  35.51254489778491  28.286585\n",
+       "E      NaN  56.793323                NaN        NaN\n",
+       "I      NaN   1.565151  69.06079187224358        NaN"
+      ]
+     },
+     "execution_count": 71,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# trazer todas as linhas onde a coluna é NaN\n",
+    "df[df.coluna1.isna()]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>coluna1</th>\n",
+       "      <th>coluna2</th>\n",
+       "      <th>coluna3</th>\n",
+       "      <th>coluna4</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>A</th>\n",
+       "      <td>19.0</td>\n",
+       "      <td>5.334578</td>\n",
+       "      <td>42.255190796214734</td>\n",
+       "      <td>17.274552</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>C</th>\n",
+       "      <td>62.0</td>\n",
+       "      <td>14.712186</td>\n",
+       "      <td>3.429024060428465</td>\n",
+       "      <td>97.323160</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>F</th>\n",
+       "      <td>12.0</td>\n",
+       "      <td>83.181236</td>\n",
+       "      <td>7.990770106266865</td>\n",
+       "      <td>17.765918</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>G</th>\n",
+       "      <td>21.0</td>\n",
+       "      <td>77.891506</td>\n",
+       "      <td>49.61628656373127</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>H</th>\n",
+       "      <td>28.0</td>\n",
+       "      <td>14.235639</td>\n",
+       "      <td>61.72276021602391</td>\n",
+       "      <td>36.772142</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   coluna1    coluna2             coluna3    coluna4\n",
+       "A     19.0   5.334578  42.255190796214734  17.274552\n",
+       "C     62.0  14.712186   3.429024060428465  97.323160\n",
+       "F     12.0  83.181236   7.990770106266865  17.765918\n",
+       "G     21.0  77.891506   49.61628656373127        NaN\n",
+       "H     28.0  14.235639   61.72276021602391  36.772142"
+      ]
+     },
+     "execution_count": 72,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# trazer todas as linhas onde a coluna não é NaN\n",
+    "df[~df.coluna1.isna()]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "execution_count": 75,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# identificando a quantidade de valores NaN em uma coluna\n",
+    "df.coluna1.isna().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "coluna1    4\n",
+       "coluna2    0\n",
+       "coluna3    1\n",
+       "coluna4    3\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 77,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# identificando a quantidade de valores NaN no dataframe\n",
+    "# true = 1\n",
+    "# false = 0\n",
+    "df.isna().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "coluna1    0.444444\n",
+       "coluna2    0.000000\n",
+       "coluna3    0.111111\n",
+       "coluna4    0.333333\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 88,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# len(df.index) -> quantidade de linhas de um dataframe\n",
+    "# cáculo para saber a porcentagem de valores faltantes em cada coluna\n",
+    "\n",
+    "df.isna().sum() / len(df.index)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 1\\.2 Tratando dados ausentes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "A    19.0\n",
+       "B     NaN\n",
+       "C    62.0\n",
+       "D     NaN\n",
+       "E     NaN\n",
+       "F    12.0\n",
+       "G    21.0\n",
+       "H    28.0\n",
+       "I     NaN\n",
+       "Name: coluna1, dtype: float64"
+      ]
+     },
+     "execution_count": 90,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['coluna1']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "A    19.0\n",
+       "B     0.0\n",
+       "C    62.0\n",
+       "D     0.0\n",
+       "E     0.0\n",
+       "F    12.0\n",
+       "G    21.0\n",
+       "H    28.0\n",
+       "I     0.0\n",
+       "Name: coluna1, dtype: float64"
+      ]
+     },
+     "execution_count": 93,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# subistituindo por zero\n",
+    "\n",
+    "df['coluna1'].fillna(0)"
    ]
   }
  ],
