--- a/EBAC Curso Ciência de Dados/Cientista de Dados/modulo_limpeza_e_preparacao_de_dados.ipynb
+++ b/EBAC Curso Ciência de Dados/Cientista de Dados/modulo_limpeza_e_preparacao_de_dados.ipynb
@@ -956,7 +956,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [
     {
@@ -974,7 +974,7 @@
        "Name: coluna1, dtype: float64"
       ]
      },
-     "execution_count": 93,
+     "execution_count": 95,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -983,6 +983,71 @@
     "# subistituindo por zero\n",
     "\n",
     "df['coluna1'].fillna(0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 100,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "A    19.0\n",
+       "B    28.4\n",
+       "C    62.0\n",
+       "D    28.4\n",
+       "E    28.4\n",
+       "F    12.0\n",
+       "G    21.0\n",
+       "H    28.0\n",
+       "I    28.4\n",
+       "Name: coluna1, dtype: float64"
+      ]
+     },
+     "execution_count": 100,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# subistituindo pela media\n",
+    "mean = df['coluna1'].mean() # média\n",
+    "\n",
+    "df['coluna1'].fillna(mean)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 106,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "A    19.0\n",
+       "B    21.0\n",
+       "C    62.0\n",
+       "D    21.0\n",
+       "E    21.0\n",
+       "F    12.0\n",
+       "G    21.0\n",
+       "H    28.0\n",
+       "I    21.0\n",
+       "Name: coluna1, dtype: float64"
+      ]
+     },
+     "execution_count": 106,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# subistituindo pela mediana\n",
+    "\n",
+    "median = df['coluna1'].sort_values().median()\n",
+    "\n",
+    "df['coluna1'].fillna(median)"
    ]
   }
  ],
