--- a/EBAC Curso Ciência de Dados/Cientista de Dados/modulo_5_limpeza_e_preparacao_de_dados.ipynb
+++ b/EBAC Curso Ciência de Dados/Cientista de Dados/modulo_5_limpeza_e_preparacao_de_dados.ipynb
@@ -11,14 +11,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 1\\. Identificando e tratando dados ausentes"
+    "## 5.1 Identificando e tratando dados ausentes"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 1\\.1 Identificando dados ausentes"
+    "### Identificando dados ausentes"
    ]
   },
   {
@@ -922,7 +922,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 1\\.2 Tratando dados ausentes"
+    "### Tratando dados ausentes"
    ]
   },
   {
@@ -1054,7 +1054,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 1\\.3 Subistituindo usando ffill e o bfill"
+    "### Subistituindo usando ffill e o bfill"
    ]
   },
   {
@@ -1150,7 +1150,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 1\\.4 Dropando as linhas com missing"
+    "### Dropando as linhas com missing"
    ]
   },
   {
@@ -1240,7 +1240,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 2\\. Dados Duplicados"
+    "### Dados Duplicados"
    ]
   },
   {
@@ -1642,7 +1642,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 3\\. Mapeamentos (map)"
+    "### Mapeamentos (map)"
    ]
   },
   {
@@ -1727,6 +1727,20 @@
     "# passa um dicionario para a série e troca os valores mapeados para o valor escolhido\n",
     "genero.map({1: 'Feminino', 0: 'Masculino'})"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 5.2 Renomeando indices e colunas"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
