--- a/EBAC Curso Ciência de Dados/Cientista de Dados/modulo_5_limpeza_e_preparacao_de_dados.ipynb
+++ b/EBAC Curso Ciência de Dados/Cientista de Dados/modulo_5_limpeza_e_preparacao_de_dados.ipynb
@@ -2310,6 +2310,544 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 158,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>nome</th>\n",
+       "      <th>imc</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Fernando</td>\n",
+       "      <td>27.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Maria</td>\n",
+       "      <td>26.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Felipe</td>\n",
+       "      <td>25.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Pedro</td>\n",
+       "      <td>16.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Bianca</td>\n",
+       "      <td>16.7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Beatriz</td>\n",
+       "      <td>17.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Patricia</td>\n",
+       "      <td>18.6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>Lucia</td>\n",
+       "      <td>24.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       nome   imc\n",
+       "0  Fernando  27.0\n",
+       "1     Maria  26.0\n",
+       "2    Felipe  25.0\n",
+       "3     Pedro  16.0\n",
+       "4    Bianca  16.7\n",
+       "5   Beatriz  17.5\n",
+       "6  Patricia  18.6\n",
+       "7     Lucia  24.0"
+      ]
+     },
+     "execution_count": 158,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_imc = pd.DataFrame({\n",
+    "    'nome': ['Fernando', 'Maria', 'Felipe', 'Pedro', 'Bianca', 'Beatriz', 'Patricia', 'Lucia'],\n",
+    "    'imc': [27, 26, 25, 16, 16.7, 17.5, 18.6, 24]\n",
+    "})\n",
+    "df_imc"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 159,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# categorizando pelo imc\n",
+    "df_imc.loc[df_imc['imc'] <= 16.9, 'imc_cat'] = 'muito_abaixo'\n",
+    "df_imc.loc[(df_imc['imc'] > 17) & (df_imc['imc'] <= 18.4), 'imc_cat'] = 'abaixo'\n",
+    "df_imc.loc[(df_imc['imc'] > 18.5) & (df_imc['imc'] <= 24.9), 'imc_cat'] = 'normal'\n",
+    "df_imc.loc[df_imc['imc'] >= 25, 'imc_cat'] = 'acima'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 160,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>nome</th>\n",
+       "      <th>imc</th>\n",
+       "      <th>imc_cat</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Fernando</td>\n",
+       "      <td>27.0</td>\n",
+       "      <td>acima</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Maria</td>\n",
+       "      <td>26.0</td>\n",
+       "      <td>acima</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Felipe</td>\n",
+       "      <td>25.0</td>\n",
+       "      <td>acima</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Pedro</td>\n",
+       "      <td>16.0</td>\n",
+       "      <td>muito_abaixo</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Bianca</td>\n",
+       "      <td>16.7</td>\n",
+       "      <td>muito_abaixo</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Beatriz</td>\n",
+       "      <td>17.5</td>\n",
+       "      <td>abaixo</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Patricia</td>\n",
+       "      <td>18.6</td>\n",
+       "      <td>normal</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>Lucia</td>\n",
+       "      <td>24.0</td>\n",
+       "      <td>normal</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       nome   imc       imc_cat\n",
+       "0  Fernando  27.0         acima\n",
+       "1     Maria  26.0         acima\n",
+       "2    Felipe  25.0         acima\n",
+       "3     Pedro  16.0  muito_abaixo\n",
+       "4    Bianca  16.7  muito_abaixo\n",
+       "5   Beatriz  17.5        abaixo\n",
+       "6  Patricia  18.6        normal\n",
+       "7     Lucia  24.0        normal"
+      ]
+     },
+     "execution_count": 160,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_imc"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 161,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# nova categorizacao pela coluna criada\n",
+    "df_imc.loc[df_imc['imc_cat'] == 'normal', 'imc_cat_2'] = 'saudavel'\n",
+    "df_imc.loc[df_imc['imc_cat'] != 'normal', 'imc_cat_2'] = 'nao_saudavel'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 162,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>nome</th>\n",
+       "      <th>imc</th>\n",
+       "      <th>imc_cat</th>\n",
+       "      <th>imc_cat_2</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Fernando</td>\n",
+       "      <td>27.0</td>\n",
+       "      <td>acima</td>\n",
+       "      <td>nao_saudavel</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Maria</td>\n",
+       "      <td>26.0</td>\n",
+       "      <td>acima</td>\n",
+       "      <td>nao_saudavel</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Felipe</td>\n",
+       "      <td>25.0</td>\n",
+       "      <td>acima</td>\n",
+       "      <td>nao_saudavel</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Pedro</td>\n",
+       "      <td>16.0</td>\n",
+       "      <td>muito_abaixo</td>\n",
+       "      <td>nao_saudavel</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Bianca</td>\n",
+       "      <td>16.7</td>\n",
+       "      <td>muito_abaixo</td>\n",
+       "      <td>nao_saudavel</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Beatriz</td>\n",
+       "      <td>17.5</td>\n",
+       "      <td>abaixo</td>\n",
+       "      <td>nao_saudavel</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Patricia</td>\n",
+       "      <td>18.6</td>\n",
+       "      <td>normal</td>\n",
+       "      <td>saudavel</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>Lucia</td>\n",
+       "      <td>24.0</td>\n",
+       "      <td>normal</td>\n",
+       "      <td>saudavel</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       nome   imc       imc_cat     imc_cat_2\n",
+       "0  Fernando  27.0         acima  nao_saudavel\n",
+       "1     Maria  26.0         acima  nao_saudavel\n",
+       "2    Felipe  25.0         acima  nao_saudavel\n",
+       "3     Pedro  16.0  muito_abaixo  nao_saudavel\n",
+       "4    Bianca  16.7  muito_abaixo  nao_saudavel\n",
+       "5   Beatriz  17.5        abaixo  nao_saudavel\n",
+       "6  Patricia  18.6        normal      saudavel\n",
+       "7     Lucia  24.0        normal      saudavel"
+      ]
+     },
+     "execution_count": 162,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_imc"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 163,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3    16.0\n",
+       "4    16.7\n",
+       "5    17.5\n",
+       "6    18.6\n",
+       "7    24.0\n",
+       "2    25.0\n",
+       "1    26.0\n",
+       "0    27.0\n",
+       "Name: imc, dtype: float64"
+      ]
+     },
+     "execution_count": 163,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# ordenando por quartis\n",
+    "\n",
+    "df_imc['imc'].sort_values()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 164,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.25    17.30\n",
+       "0.50    21.30\n",
+       "0.75    25.25\n",
+       "Name: imc, dtype: float64"
+      ]
+     },
+     "execution_count": 164,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_imc['imc'].quantile([0.25, 0.5, 0.75])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 165,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_imc.loc[df_imc['imc'] <= 17.3, 'imc_cat_3'] = '1o_quartil'\n",
+    "df_imc.loc[(df_imc['imc'] > 17.30) & (df_imc['imc'] <= 21.30), 'imc_cat_3'] = '2o_quartil'\n",
+    "df_imc.loc[(df_imc['imc'] > 21.30) & (df_imc['imc'] <= 25.25), 'imc_cat_3'] = '3o_quartil'\n",
+    "df_imc.loc[df_imc['imc'] > 25.25, 'imc_cat_3'] = '4o_quartil'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 166,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>nome</th>\n",
+       "      <th>imc</th>\n",
+       "      <th>imc_cat</th>\n",
+       "      <th>imc_cat_2</th>\n",
+       "      <th>imc_cat_3</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Fernando</td>\n",
+       "      <td>27.0</td>\n",
+       "      <td>acima</td>\n",
+       "      <td>nao_saudavel</td>\n",
+       "      <td>4o_quartil</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Maria</td>\n",
+       "      <td>26.0</td>\n",
+       "      <td>acima</td>\n",
+       "      <td>nao_saudavel</td>\n",
+       "      <td>4o_quartil</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Felipe</td>\n",
+       "      <td>25.0</td>\n",
+       "      <td>acima</td>\n",
+       "      <td>nao_saudavel</td>\n",
+       "      <td>3o_quartil</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Pedro</td>\n",
+       "      <td>16.0</td>\n",
+       "      <td>muito_abaixo</td>\n",
+       "      <td>nao_saudavel</td>\n",
+       "      <td>1o_quartil</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Bianca</td>\n",
+       "      <td>16.7</td>\n",
+       "      <td>muito_abaixo</td>\n",
+       "      <td>nao_saudavel</td>\n",
+       "      <td>1o_quartil</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Beatriz</td>\n",
+       "      <td>17.5</td>\n",
+       "      <td>abaixo</td>\n",
+       "      <td>nao_saudavel</td>\n",
+       "      <td>2o_quartil</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Patricia</td>\n",
+       "      <td>18.6</td>\n",
+       "      <td>normal</td>\n",
+       "      <td>saudavel</td>\n",
+       "      <td>2o_quartil</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>Lucia</td>\n",
+       "      <td>24.0</td>\n",
+       "      <td>normal</td>\n",
+       "      <td>saudavel</td>\n",
+       "      <td>3o_quartil</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       nome   imc       imc_cat     imc_cat_2   imc_cat_3\n",
+       "0  Fernando  27.0         acima  nao_saudavel  4o_quartil\n",
+       "1     Maria  26.0         acima  nao_saudavel  4o_quartil\n",
+       "2    Felipe  25.0         acima  nao_saudavel  3o_quartil\n",
+       "3     Pedro  16.0  muito_abaixo  nao_saudavel  1o_quartil\n",
+       "4    Bianca  16.7  muito_abaixo  nao_saudavel  1o_quartil\n",
+       "5   Beatriz  17.5        abaixo  nao_saudavel  2o_quartil\n",
+       "6  Patricia  18.6        normal      saudavel  2o_quartil\n",
+       "7     Lucia  24.0        normal      saudavel  3o_quartil"
+      ]
+     },
+     "execution_count": 166,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_imc"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Construindo dummies"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
